--- a/index.html
+++ b/index.html
@@ -71,6 +71,17 @@
                 alt="image" />
         </p>
 
+        <h2 id="try-jlogviewer">Try JLogViewer Online</h2>
+
+        To try a <code class="language-plaintext highlighter-rouge">readonly</code> demo:
+        <ul>
+            <li>Click <a href="http://allproxy.ddns.net/jlogviewer">Try JLogViewer</a></li>
+            <li>On the left side panel click the <code
+                    class="language-plaintext highlighter-rouge">Restore Session</code> button</li>
+            <li>From the Restore Session Modal click <code class="language-plaintext highlighter-rouge">Restore</code>
+                the JSON Log File session</li>
+        </ul>
+
         <h2 id="install">Install</h2>
 
         <p><strong>Install allproxy package</strong></p>
