--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
             <li>On the left side panel click the <code
                     class="language-plaintext highlighter-rouge">Restore Session</code> button</li>
             <li>From the Restore Session Modal click <code class="language-plaintext highlighter-rouge">Restore</code>
-                the JSON Log File session</li>
+                the <b>Sample NGINX JSON Log</b></li>
+            <li>Select the <b>Queries</b> dropdown and click a query to filter the log</li>
         </ul>
 
         <h2 id="install">Install</h2>
