--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
         To try a <code class="language-plaintext highlighter-rouge">readonly</code> demo:
         <ul>
-            <li>Click <a href="http://allproxy.ddns.net/jlogviewer">Try JLogViewer</a></li>
+            <li>Click <a href="https://allproxy.ddns.net/jlogviewer">Try JLogViewer</a></li>
             <li>On the left side panel click the <code
                     class="language-plaintext highlighter-rouge">Restore Session</code> button</li>
             <li>From the Restore Session Modal click <code class="language-plaintext highlighter-rouge">Restore</code>
